saas-1551 - images to sdk (finished) + object serialization as query helper
